Non-proportional edge slide behaving incorrectly. #31654

Closed
opened 2012-05-31 00:27:12 +02:00 by Bob Smith · 7 comments

%%%The new non-proportional edge slide seems to only work properly when it's used as part of 'Loop Cut & Slide'; it behaves incorrectly when using edgeslide on an existing edgeloop.

r47188
Windows 7
Geforce GTS 250%%%

%%%The new non-proportional edge slide seems to only work properly when it's used as part of 'Loop Cut & Slide'; it behaves incorrectly when using edgeslide on an existing edgeloop. r47188 Windows 7 Geforce GTS 250%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I'm not sure what exactly you mean by "behaves incorrectly", but I can see some behavior which I think is not that way it should be. When you switch to Even ON, and you haven't moved the mouse yet, it already changes the vertex positions.

Also perhaps this could be renamed to 'Even distance'?%%%

%%%I'm not sure what exactly you mean by "behaves incorrectly", but I can see some behavior which I think is not that way it should be. When you switch to Even ON, and you haven't moved the mouse yet, it already changes the vertex positions. Also perhaps this could be renamed to 'Even distance'?%%%
Author

%%%Sorry, what I meant was that the loop being slid doesn't take on the same shape as the chosen surrounding edge loop.%%%

%%%Sorry, what I meant was that the loop being slid doesn't take on the same shape as the chosen surrounding edge loop.%%%
Author

%%%Forgot to mention, I attached a picture to show what I mean.%%%

%%%Forgot to mention, I attached a picture to show what I mean.%%%
Author

%%%I have noticed it only works correctly when the edgeloop's vertices are exactly halfway between the surrounding loops.%%%

%%%I have noticed it only works correctly when the edgeloop's vertices are exactly halfway between the surrounding loops.%%%

%%%fixed r50975.%%%

%%%fixed r50975.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31654
No description provided.