fix [#31654] Non-proportional edge slide behaving incorrectly.